# chronicle

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  pyproject.toml
scripts/: demo_qa.py  demo_temporal.py  ingest_corpus.py  smoke_test.py
src/chronicle/: __init__.py  api.py  config.py  generate.py  ingest.py  retrieve.py
tests/: test_api.py  test_generate.py  test_ingest.py  test_retrieve.py
