[project]
name = "chronicle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pinecone>=5.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic-settings>=2.6",
    "pypdf>=5.0",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
